feat: auth middleware, idea crud, gorm annotations
