# internal/models/refresh_token.go
@@ -7,7 +7,11 @@ import (
 )
 
 type UserRefreshToken struct {
-	UserID       uuid.UUID
-	RefreshToken string `gorm:"primaryKey"`
-	ExpiresAt    time.Time
+	UserID       uuid.UUID `gorm:"not null;foreignKey:UserID;constraint:OnDelete:CASCADE"`
+	RefreshToken string    `gorm:"primaryKey;type:text"`
+	ExpiresAt    time.Time `gorm:"not null"`
+}
+
+func (UserRefreshToken) TableName() string {
+	return "user_refresh_tokens"
 }
