# internal/router/router.go
@@ -1,8 +1,12 @@
 package router
 
 import (
+	"log/slog"
+
 	"github.com/GeorgiiMalishev/ideas-platform/config"
 	"github.com/GeorgiiMalishev/ideas-platform/internal/handlers"
+	"github.com/GeorgiiMalishev/ideas-platform/internal/middleware"
+	"github.com/GeorgiiMalishev/ideas-platform/internal/usecase"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -13,18 +17,25 @@ type AppRouter struct {
 	userHandler       *handlers.UserHandler
 	coffeeShopHandler *handlers.CoffeeShopHandler
 	authHandler       *handlers.AuthHandler
+
+	authUsecase usecase.AuthUsecase
+	logger      *slog.Logger
 }
 
 func NewRouter(cfg *config.Config,
 	userHandler *handlers.UserHandler,
 	coffeeShopHandler *handlers.CoffeeShopHandler,
 	authHandler *handlers.AuthHandler,
+	authUsecase usecase.AuthUsecase,
+	logger *slog.Logger,
 ) *AppRouter {
 	return &AppRouter{
 		cfg:               cfg,
 		userHandler:       userHandler,
 		coffeeShopHandler: coffeeShopHandler,
 		authHandler:       authHandler,
+		authUsecase:       authUsecase,
+		logger:            logger,
 	}
 }
 
@@ -39,22 +50,31 @@ func (ar AppRouter) SetupRouter() *gin.Engine {
 		// users
 		v1.GET("/users", ar.userHandler.GetAllUsers)
 		v1.GET("/users/:id", ar.userHandler.GetUser)
-		v1.PUT("/users/:id", ar.userHandler.UpdateUser)
-		v1.DELETE("/users/:id", ar.userHandler.DeleteUser)
 
 		// coffee_shop
-		v1.POST("/coffee-shops", ar.coffeeShopHandler.CreateCoffeeShop)
 		v1.GET("/coffee-shops", ar.coffeeShopHandler.GetAllCoffeeShops)
 		v1.GET("/coffee-shops/:id", ar.coffeeShopHandler.GetCoffeeShop)
-		v1.PUT("/coffee-shops/:id", ar.coffeeShopHandler.UpdateCoffeeShop)
-		v1.DELETE("/coffee-shops/:id", ar.coffeeShopHandler.DeleteCoffeeShop)
 
 		// auth
 		v1.GET("/auth/:phone", ar.authHandler.GetOTP)
 		v1.POST("/auth", ar.authHandler.VerifyOTP)
 		v1.POST("/auth/refresh", ar.authHandler.Refresh)
-		v1.POST("/logout", ar.authHandler.Logout)
-		v1.POST("/logout-everywhere", ar.authHandler.LogoutEverywhere)
+
+	}
+
+	authRequired := v1.Group("")
+	authRequired.Use(middleware.AuthMiddleware(ar.authUsecase, ar.logger))
+	{
+		authRequired.GET("/users/me", ar.userHandler.GetCurrentAuthentificatedUser)
+		authRequired.PUT("/users/:id", ar.userHandler.UpdateUser)
+		authRequired.DELETE("/users/:id", ar.userHandler.DeleteUser)
+
+		authRequired.POST("/logout", ar.authHandler.Logout)
+		authRequired.POST("/logout-everywhere", ar.authHandler.LogoutEverywhere)
+
+		authRequired.POST("/coffee-shops", ar.coffeeShopHandler.CreateCoffeeShop)
+		authRequired.DELETE("/coffee-shops/:id", ar.coffeeShopHandler.DeleteCoffeeShop)
+		authRequired.PUT("/coffee-shops/:id", ar.coffeeShopHandler.UpdateCoffeeShop)
 	}
 
 	return r
